# RoboPico-LineFollower

./: CMakeLists.txt  FreeRTOSConfig.h  README.md  main.c  motor_straight_test.c
source/: CMakeLists.txt  header.h
source/hmc5883l/: hmc5883l.c  hmc5883l.h
source/io/: barcodes.c  barcodes.h  blink.c  io_handler.c  line_following.c  station1.c  telemetry.h
source/motor/: commands.h  motor.c  motor.h
source/networking/: config.h  wifi.c  wifi.h
source/sensors/: encoder.c  infrared.c  interrupt.c  sensors.h  ultrasonic.c
